fix(header): truncate subtitle and appName when necessary

--- a/packages/react/src/components/Header/_header.scss
+++ b/packages/react/src/components/Header/_header.scss
@@ -15,21 +15,28 @@
 
   & .#{$prefix}--header__name {
     padding-left: $spacing-03;
-    white-space: nowrap;
+    min-width: 150px;
+    display: inline-flex;
 
     > span.#{$prefix}--header__name--prefix {
-      display: inline-flex;
+      white-space: nowrap;
+      overflow: visible;
+      display: initial;
     }
 
     > span {
       display: none;
       @media (min-width: 672px) {
-        display: inline-flex;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        display: initial;
       }
     }
 
     > span.#{$iot-prefix}--header__short-name {
-      display: inline-flex;
+      white-space: nowrap;
+      display: initial;
 
       @media (min-width: 672px) {
         display: none;
@@ -109,6 +116,9 @@
   padding: $spacing-01 $spacing-05;
   color: $disabled-02;
   margin-left: $spacing-05;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .#{$prefix}--overflow-menu {
